Fixes image border issue on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -184,6 +184,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 12px;
     }
   }
   .success_card_des {
@@ -250,6 +251,12 @@
 @media(max-width: 767px) {
   .sub_heading {
     width: 100%;
+  }
+
+  .success_card {
+    &:hover {
+      transform: scale(1);
+    }
   }
 
   .how_we_work {
